Crash undoing "Make Library Override" for linked collection with shapekey #98136

Closed
opened 2022-05-15 11:39:03 +02:00 by Georg K · 8 comments

System Information
Operating system: Linux-5.15.32-1-MANJARO-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.15.32-1-MANJARO, LLVM 13.0.1) AMD 4.5 (Core Profile) Mesa 21.3.8

Blender Version
Broken: 3.1.2, version: 3.3.0 Alpha, branch: master, commit date: 2022-05-13 16:07, hash: fa7224d8ed
Worked: never since 0291039079

Short description of error
Blender crashes when trying to undo "Make Library Override" for a linked collection containing an armature and a mesh with a shapekey driven by a bone if there is a second collection in the source file that contains an armature that shares armature data with the linked armature (or uses a copy of the armature data).
But unfortunately, that description is missing something since it was not possible to create a collection that causes the crash by using just these ingredients.

Exact steps for others to reproduce the error

  • Link the "Link this" collection from the attached file
  • use Object - Relations - Make Library Override
  • press Ctrl-Z
  • Crash

Crash undoing Make Library Override.blend

error message:

 Blender 3.3.0, Commit date: 2022-05-13 16:07, Hash fa7224d8ed88
bpy.ops.object.select_all(action='SELECT')  # Operator
bpy.ops.object.delete(use_global=False)  # Operator
bpy.context.space_data.bookmarks_active = 0  # Property
bpy.ops.object.make_override_library()  # Operator

 backtrace
./blender(BLI_system_backtrace+0x33) [0xc29ed13]
./blender() [0x118571e]
/usr/lib/libc.so.6(+0x42560) [0x7f3b49a2f560]
./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_collectionEP15LayerCollectionP10Collection+0x1a) [0x18a632a]
./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_collectionEP15LayerCollectionP10Collection+0x145) [0x18a6455]
./blender(_ZN7blender3deg20DepsgraphNodeBuilder12build_objectEiP6ObjectNS0_26eDepsNode_LinkedState_TypeEb+0x28e) [0x18a682e]
./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_view_layerEP5SceneP9ViewLayerNS0_26eDepsNode_LinkedState_TypeE+0xb2) [0x18aa132]
./blender(_ZN7blender3deg23AbstractBuilderPipeline16build_step_nodesEv+0x76) [0x1891d76]
./blender(_ZN7blender3deg23AbstractBuilderPipeline5buildEv+0x42) [0x1891f92]
./blender(DEG_graph_build_from_view_layer+0x31) [0x187a631]
./blender() [0x12a3ecc]
./blender(wm_event_do_depsgraph+0xbb) [0x1712b6b]
./blender(wm_event_do_refresh_wm_and_depsgraph+0x87) [0x1712cb7]
./blender(wm_event_do_notifiers+0x609) [0x171ad09]
./blender(WM_main+0x28) [0x170d778]
./blender(main+0x33a) [0x1087a7a]
/usr/lib/libc.so.6(+0x2d310) [0x7f3b49a1a310]
/usr/lib/libc.so.6(__libc_start_main+0x81) [0x7f3b49a1a3c1]
./blender(_start+0x25) [0x1181d85]


**System Information** Operating system: Linux-5.15.32-1-MANJARO-x86_64-with-glibc2.35 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.15.32-1-MANJARO, LLVM 13.0.1) AMD 4.5 (Core Profile) Mesa 21.3.8 **Blender Version** Broken: 3.1.2, version: 3.3.0 Alpha, branch: master, commit date: 2022-05-13 16:07, hash: `fa7224d8ed` Worked: never since 0291039079 **Short description of error** Blender crashes when trying to undo "Make Library Override" for a linked collection containing an armature and a mesh with a shapekey driven by a bone if there is a second collection in the source file that contains an armature that shares armature data with the linked armature (or uses a copy of the armature data). But unfortunately, that description is missing something since it was not possible to create a collection that causes the crash by using just these ingredients. **Exact steps for others to reproduce the error** - Link the "Link this" collection from the attached file - use Object - Relations - Make Library Override - press Ctrl-Z - Crash [Crash undoing Make Library Override.blend](https://archive.blender.org/developer/F13075351/Crash_undoing_Make_Library_Override.blend) error message: ``` Blender 3.3.0, Commit date: 2022-05-13 16:07, Hash fa7224d8ed88 bpy.ops.object.select_all(action='SELECT') # Operator bpy.ops.object.delete(use_global=False) # Operator bpy.context.space_data.bookmarks_active = 0 # Property bpy.ops.object.make_override_library() # Operator backtrace ./blender(BLI_system_backtrace+0x33) [0xc29ed13] ./blender() [0x118571e] /usr/lib/libc.so.6(+0x42560) [0x7f3b49a2f560] ./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_collectionEP15LayerCollectionP10Collection+0x1a) [0x18a632a] ./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_collectionEP15LayerCollectionP10Collection+0x145) [0x18a6455] ./blender(_ZN7blender3deg20DepsgraphNodeBuilder12build_objectEiP6ObjectNS0_26eDepsNode_LinkedState_TypeEb+0x28e) [0x18a682e] ./blender(_ZN7blender3deg20DepsgraphNodeBuilder16build_view_layerEP5SceneP9ViewLayerNS0_26eDepsNode_LinkedState_TypeE+0xb2) [0x18aa132] ./blender(_ZN7blender3deg23AbstractBuilderPipeline16build_step_nodesEv+0x76) [0x1891d76] ./blender(_ZN7blender3deg23AbstractBuilderPipeline5buildEv+0x42) [0x1891f92] ./blender(DEG_graph_build_from_view_layer+0x31) [0x187a631] ./blender() [0x12a3ecc] ./blender(wm_event_do_depsgraph+0xbb) [0x1712b6b] ./blender(wm_event_do_refresh_wm_and_depsgraph+0x87) [0x1712cb7] ./blender(wm_event_do_notifiers+0x609) [0x171ad09] ./blender(WM_main+0x28) [0x170d778] ./blender(main+0x33a) [0x1087a7a] /usr/lib/libc.so.6(+0x2d310) [0x7f3b49a1a310] /usr/lib/libc.so.6(__libc_start_main+0x81) [0x7f3b49a1a3c1] ./blender(_start+0x25) [0x1181d85] ```
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 9df91654dc

This issue was referenced by 9df91654dc979e3d334de69eded7f816bef223e3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-16 15:39:47 +02:00
Author

Thanks for fixing the crash! Now there is a greyed out, linked "OVERRIDE_HIDDEN" collection pointing to the "Dup" collection in the example file. Since there seems to be no documentation on this topic, could you please explain what that means and why linking the "Link this" collection now links the other collection, too?

Thanks for fixing the crash! Now there is a greyed out, linked "OVERRIDE_HIDDEN" collection pointing to the "Dup" collection in the example file. Since there seems to be no documentation on this topic, could you please explain what that means and why linking the "Link this" collection now links the other collection, too?

Essentially, there should be no local/directly linked object not belonging to at least one collection in Blender. Your Link This collection is pulling in two armature objects, OArmature and Armature, the later from the shapekey, and not being in any collection.

Since this is an indirectly linked data, it's fine, but when making it a liboverride, all objects are overridden, which means the 'invisible' Armature one must also be instantiated in the scene, which is done through that hidden collection.

Note that such process is a bit of a band-aid for badly organized assets, ideally all of your objects should be gathered into collections, with a single well-defined collection as 'root' of the whole hierarchy of dependencies.

Essentially, there should be no local/directly linked object not belonging to at least one collection in Blender. Your `Link This` collection is pulling in **two** armature objects, `OArmature` and `Armature`, the later from the shapekey, and not being in any collection. Since this is an indirectly linked data, it's fine, but when making it a liboverride, all objects are overridden, which means the 'invisible' `Armature` one must also be instantiated in the scene, which is done through that hidden collection. Note that such process is a bit of a band-aid for badly organized assets, ideally all of your objects should be gathered into collections, with a single well-defined collection as 'root' of the whole hierarchy of dependencies.
Author

Oh, I did not notice that the driver was referencing the wrong armature, that explains a lot actually, thank you!

Oh, I did not notice that the driver was referencing the wrong armature, that explains a lot actually, thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98136
No description provided.